--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mahir Mobilya | Ankara | Özel Ölçü Mobilya & İç Dekorasyon</title>
   <meta name="description" content="Mahir Mobilya: Mutfak dolabı, banyo dolabı, yatak odası, yemek odası, genç odası, çocuk odası ve kapı. Keşif, tasarım, üretim ve montaj tek elde. Siteler/Ankara." />
-  <link rel="icon" type="image/png" href="assets/logo.png" />
+  <link rel="icon" type="image/png" href="logo.png" />
   <meta name="theme-color" content="#ffffff" />
   <!-- Icons (Remix Icon) -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
   <!-- Open Graph -->
   <meta property="og:title" content="Mahir Mobilya" />
   <meta property="og:description" content="Özel ölçü üretim ve iç dekorasyon çözümleri." />
-  <meta property="og:image" content="assets/hero-1.jpg" />
+  <meta property="og:image" content="hero-1.jpg" />
   <meta property="og:type" content="website" />
 
-  <link rel="preload" href="assets/hero-1.jpg" as="image" />
-  <link rel="preload" href="assets/hero-2.jpg" as="image" />
-  <link rel="preload" href="assets/hero-3.jpg" as="image" />
+  <link rel="preload" href="hero-1.jpg" as="image" />
+  <link rel="preload" href="hero-2.jpg" as="image" />
+  <link rel="preload" href="hero-3.jpg" as="image" />
   <link rel="stylesheet" href="style.css" />
 
   <!-- JSON-LD (YAYINLAMA SONRASI "example.com" ADRESİNİ GÜNCELLEYİN) -->
@@ -26,9 +26,9 @@
     "@context": "https://schema.org",
     "@type": "FurnitureStore",
     "name": "Mahir Mobilya Ankara",
-    "image": ["https://example.com/assets/hero-1.jpg"],
+    "image": ["https://example.com/hero-1.jpg"],
     "url": "https://example.com/",
-    "logo": "https://example.com/assets/logo.png",
+    "logo": "https://example.com/logo.png",
     "telephone": "+90 505 515 00 15",
     "address": {
       "@type": "PostalAddress",
@@ -53,7 +53,7 @@
   <header class="site-header" id="top">
     <div class="container header-inner">
       <a href="index.html" class="brand" aria-label="Mahir Mobilya Ana Sayfa">
-        <img src="assets/logo.png" alt="Mahir Mobilya" class="logo" />
+        <img src="logo.png" alt="Mahir Mobilya" class="logo" />
         <span class="brand-text">Mahir Mobilya</span>
       </a>
 
@@ -89,17 +89,17 @@
     <section class="hero" role="banner">
       <div class="hero-slider" aria-label="Öne çıkan projeler">
         <div class="slide active"
-             style="--img:url('assets/hero-1.jpg')"
+             style="--img:url('hero-1.jpg')"
              data-title="Mutfakta <span class='accent'>Usta Dokunuş</span>"
              data-desc="Modern mutfak dolaplarında premium malzeme, kusursuz montaj ve şeffaf fiyat.">
         </div>
         <div class="slide"
-             style="--img:url('assets/hero-2.jpg')"
+             style="--img:url('hero-2.jpg')"
              data-title="Banyoda <span class='accent'>Lüks Zarafet</span>"
              data-desc="Neme dayanıklı banyo dolapları ve altın ton detaylarla uzun ömürlü şıklık.">
         </div>
         <div class="slide"
-             style="--img:url('assets/hero-3.jpg')"
+             style="--img:url('hero-3.jpg')"
              data-title="Kapılarda <span class='accent'>Zamansız Şıklık</span>"
              data-desc="Lake ve laminant kapılarda estetik, dayanıklılık ve sessiz kullanım.">
         </div>
@@ -143,49 +143,49 @@
         </header>
 
         <div class="grid-3">
-          <a class="service photo-card" href="#" style="--img:url('assets/svc-mutfak.jpg')">
+          <a class="service photo-card" href="#" style="--img:url('svc-mutfak.jpg')">
             <div class="badge">Mutfak Dolabı</div>
             <div class="txt">
               <h3>Modern & Fonksiyonel</h3>
               <p>Modüler sistemler, kaliteli menteşe/aksesuar.</p>
             </div>
           </a>
-          <a class="service photo-card" href="#" style="--img:url('assets/svc-banyo.jpg')">
+          <a class="service photo-card" href="#" style="--img:url('svc-banyo.jpg')">
             <div class="badge">Banyo Dolabı</div>
             <div class="txt">
               <h3>Neme Dayanıklı</h3>
               <p>Lake, laminant ve kompozit yüzey seçenekleri.</p>
             </div>
           </a>
-          <a class="service photo-card" href="#" style="--img:url('assets/svc-yatak.jpg')">
+          <a class="service photo-card" href="#" style="--img:url('svc-yatak.jpg')">
             <div class="badge">Yatak Odası</div>
             <div class="txt">
               <h3>Sessiz & Şık</h3>
               <p>Raylı dolap, bazalı yatak, akıllı iç düzen.</p>
             </div>
           </a>
-          <a class="service photo-card" href="#" style="--img:url('assets/svc-yemek.jpg')">
+          <a class="service photo-card" href="#" style="--img:url('svc-yemek.jpg')">
             <div class="badge">Yemek Odası</div>
             <div class="txt">
               <h3>Estetik Takımlar</h3>
               <p>Masa, konsol ve vitrin bütünlüğü.</p>
             </div>
           </a>
-          <a class="service photo-card" href="#" style="--img:url('assets/svc-genc.jpg')">
+          <a class="service photo-card" href="#" style="--img:url('svc-genc.jpg')">
             <div class="badge">Genç Odası</div>
             <div class="txt">
               <h3>Akıllı Depolama</h3>
               <p>Çalışma alanı ve modüler raf/dolaplar.</p>
             </div>
           </a>
-          <a class="service photo-card" href="#" style="--img:url('assets/svc-cocuk.jpg')">
+          <a class="service photo-card" href="#" style="--img:url('svc-cocuk.jpg')">
             <div class="badge">Çocuk Odası</div>
             <div class="txt">
               <h3>Güvenli & Neşeli</h3>
               <p>Köşe korumaları, yuvarlatılmış detaylar.</p>
             </div>
           </a>
-          <a class="service photo-card" href="#" style="--img:url('assets/svc-kapi.jpg')">
+          <a class="service photo-card" href="#" style="--img:url('svc-kapi.jpg')">
             <div class="badge">Kapı</div>
             <div class="txt">
               <h3>Lake & Laminant</h3>
@@ -216,21 +216,21 @@
           <p>En çok ilgi gören projelerimizden kareler.</p>
         </header>
         <div class="grid-4">
-          <a class="shot" href="#" style="--img:url('assets/gal-1.jpg')"><span>Mutfak</span></a>
-          <a class="shot" href="#" style="--img:url('assets/gal-2.jpg')"><span>Banyo</span></a>
-          <a class="shot" href="#" style="--img:url('assets/gal-3.jpg')"><span>Yatak</span></a>
-          <a class="shot" href="#" style="--img:url('assets/gal-4.jpg')"><span>Kapı</span></a>
-          <a class="shot" href="#" style="--img:url('assets/gal-5.jpg')"><span>Yemek</span></a>
-          <a class="shot" href="#" style="--img:url('assets/gal-6.jpg')"><span>Genç</span></a>
-          <a class="shot" href="#" style="--img:url('assets/gal-7.jpg')"><span>Çocuk</span></a>
-          <a class="shot" href="#" style="--img:url('assets/gal-8.jpg')"><span>Detay</span></a>
+          <a class="shot" href="#" style="--img:url('gal-1.jpg')"><span>Mutfak</span></a>
+          <a class="shot" href="#" style="--img:url('gal-2.jpg')"><span>Banyo</span></a>
+          <a class="shot" href="#" style="--img:url('gal-3.jpg')"><span>Yatak</span></a>
+          <a class="shot" href="#" style="--img:url('gal-4.jpg')"><span>Kapı</span></a>
+          <a class="shot" href="#" style="--img:url('gal-5.jpg')"><span>Yemek</span></a>
+          <a class="shot" href="#" style="--img:url('gal-6.jpg')"><span>Genç</span></a>
+          <a class="shot" href="#" style="--img:url('gal-7.jpg')"><span>Çocuk</span></a>
+          <a class="shot" href="#" style="--img:url('gal-8.jpg')"><span>Detay</span></a>
         </div>
       </div>
     </section>
 
     <!-- HAKKIMIZDA -->
     <section class="about" id="hakkimizda" aria-label="Hakkımızda">
-      <div class="about-visual" style="--img:url('assets/about-wide.jpg')">
+      <div class="about-visual" style="--img:url('about-wide.jpg')">
         <div class="about-overlay">
           <div class="container about-copy">
             <h2>Mahir Mobilya Hakkında</h2>
@@ -248,14 +248,14 @@
           <p>Son işlerden seçmeler.</p>
         </header>
         <div class="grid-4 gal-cards">
-          <a class="gal-card" href="#"><img src="assets/gal-1.jpg" alt="Proje 1" loading="lazy"><span>Mutfak</span></a>
-          <a class="gal-card" href="#"><img src="assets/gal-2.jpg" alt="Proje 2" loading="lazy"><span>Banyo</span></a>
-          <a class="gal-card" href="#"><img src="assets/gal-3.jpg" alt="Proje 3" loading="lazy"><span>Yatak</span></a>
-          <a class="gal-card" href="#"><img src="assets/gal-4.jpg" alt="Proje 4" loading="lazy"><span>Kapı</span></a>
-          <a class="gal-card" href="#"><img src="assets/gal-5.jpg" alt="Proje 5" loading="lazy"><span>Yemek</span></a>
-          <a class="gal-card" href="#"><img src="assets/gal-6.jpg" alt="Proje 6" loading="lazy"><span>Genç</span></a>
-          <a class="gal-card" href="#"><img src="assets/gal-7.jpg" alt="Proje 7" loading="lazy"><span>Çocuk</span></a>
-          <a class="gal-card" href="#"><img src="assets/gal-8.jpg" alt="Proje 8" loading="lazy"><span>Detay</span></a>
+          <a class="gal-card" href="#"><img src="gal-1.jpg" alt="Proje 1" loading="lazy"><span>Mutfak</span></a>
+          <a class="gal-card" href="#"><img src="gal-2.jpg" alt="Proje 2" loading="lazy"><span>Banyo</span></a>
+          <a class="gal-card" href="#"><img src="gal-3.jpg" alt="Proje 3" loading="lazy"><span>Yatak</span></a>
+          <a class="gal-card" href="#"><img src="gal-4.jpg" alt="Proje 4" loading="lazy"><span>Kapı</span></a>
+          <a class="gal-card" href="#"><img src="gal-5.jpg" alt="Proje 5" loading="lazy"><span>Yemek</span></a>
+          <a class="gal-card" href="#"><img src="gal-6.jpg" alt="Proje 6" loading="lazy"><span>Genç</span></a>
+          <a class="gal-card" href="#"><img src="gal-7.jpg" alt="Proje 7" loading="lazy"><span>Çocuk</span></a>
+          <a class="gal-card" href="#"><img src="gal-8.jpg" alt="Proje 8" loading="lazy"><span>Detay</span></a>
         </div>
         <div class="gal-more">
           <a class="btn btn-outline" href="#">Tüm Galeriyi Gör →</a>
@@ -311,7 +311,7 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="foot-brand">
-        <img src="assets/logo.png" alt="Mahir Mobilya" class="logo-lg"/>
+        <img src="logo.png" alt="Mahir Mobilya" class="logo-lg"/>
         <div>
           <strong class="foot-title">Mahir Mobilya</strong>
           <p>Özel ölçü mobilya & iç dekorasyon.</p>
